--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-prefetch>
-		<div>%sveltekit.body%</div>
+	<body  data-sveltekit-prefetch>
+		<div class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
